<resources>
    <string name="app_name">Just Java</string>

    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="add_whipped_cream">Add whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="add_chocolate">Add chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="order">ORDER</string>
    <string name="thank_you">Thank you!</string>
</resources>
